test/parsing/issue-25000-loop.good
issue-25000-loop.chpl:1: error: Throwaway variable '_' is not allowed in this context
