test/parsing/issue-25000-loop.chpl
for (_) in 1..10 {}
